--- a/index.html
+++ b/index.html
@@ -148,18 +148,41 @@
             <section>
               <div id="weRecomend" class="weRecomend">
                 <h3 class="weRecomend__title">We recomend</h3>
-                <div class="productCard">
-                  <div class="productCard__code">Code: <span>36172</span></div>
-                  <img
-                    src="/img/foil_balls/foil_balls_rocket.png"
-                    alt="Rocket ball"
-                    class="productCard__img"
-                  />
-                  <div class="productCard__title"><span>Rocket ball</span></div>
-                  <div class="productCard__price"><span>10</span></div>
-                  <button class="productCard__btn" onclick="buyProduct()">
-                    Buy
-                  </button>
+                <div class="weRecomend__products">
+                  <div class="productCard">
+                    <div class="productCard__code">
+                      Code: <span>36172</span>
+                    </div>
+                    <img
+                      src="/img/foil_balls/foil_balls_rocket.png"
+                      alt="Rocket ball"
+                      class="productCard__img"
+                    />
+                    <div class="productCard__title">
+                      <span>Rocket ball</span>
+                    </div>
+                    <div class="productCard__price"><span>10</span></div>
+                    <button class="productCard__btn" onclick="buyProduct()">
+                      Buy
+                    </button>
+                  </div>
+                  <div class="productCard">
+                    <div class="productCard__code">
+                      Code: <span>52061</span>
+                    </div>
+                    <img
+                      src="/img/gel_balls/gel_balls_pack11.png"
+                      alt="Rocket ball"
+                      class="productCard__img"
+                    />
+                    <div class="productCard__title">
+                      <span>Gel balls pack 11</span>
+                    </div>
+                    <div class="productCard__price"><span>10</span></div>
+                    <button class="productCard__btn" onclick="buyProduct()">
+                      Buy
+                    </button>
+                  </div>
                 </div>
               </div>
             </section>
