--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="wrapper">
       <header id="header">
-        <a href="/"><img class="logo" src="/img/logo.png" alt="logo" /></a>
+        <a href="/"><img class="logo" src="./img/logo.png" alt="logo" /></a>
         <nav class="headerNav">
           <ul class="headerNav__list">
             <li class="headerNav__item">
               <a class="headerNav__link" href="/">Home</a>
             </li>
             <li class="headerNav__item">
-              <a class="headerNav__link" href="/pages/categories.html"
+              <a class="headerNav__link" href="./pages/categories.html"
                 >Categories</a
               >
             </li>
             <li class="headerNav__item">
-              <a class="headerNav__link" href="/pages/about.html">About Us</a>
+              <a class="headerNav__link" href="./pages/about.html">About Us</a>
             </li>
           </ul>
         </nav>
@@ -245,7 +245,6 @@
       id="toTopBtn"
       title="Go to top"
     ></button>
-    <script src="/js/sweetalert2.all.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
