--- a/pages/about.html
+++ b/pages/about.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="wrapper">
       <header id="header">
-        <a href="/"><img class="logo" src="../img/logo.png" alt="logo" /></a>
+        <a href="/"><img class="logo" src="/img/logo.png" alt="logo" /></a>
         <nav class="headerNav">
           <ul class="headerNav__list">
             <li class="headerNav__item">
               <a class="headerNav__link" href="/">Home</a>
             </li>
             <li class="headerNav__item">
-              <a class="headerNav__link" href="./categories.html">Categories</a>
+              <a class="headerNav__link" href="/pages/categories.html"
+                >Categories</a
+              >
             </li>
             <li class="headerNav__item">
-              <a class="headerNav__link" href="./about.html">About Us</a>
+              <a class="headerNav__link" href="/pages/about.html">About Us</a>
             </li>
           </ul>
         </nav>
@@ -90,7 +92,7 @@
           >
         </div>
         <div class="footerBox">
-                      <div class="footerBox__title">Support</div>
+          <div class="footerBox__title">Support</div>
           <a href="tel:+380937597572" class="footerBox__phone"
             >+380 93 759 75 72</a
           >
@@ -103,6 +105,6 @@
       id="toTopBtn"
       title="Go to top"
     ></button>
-    <script src="./js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
