law landings added and fix footer

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -103,15 +103,35 @@
         </div>
         <div class="footerBox">
           <div class="footerBox__title">E-mail</div>
-          <a href="mailto:ballszone7@gmail.com" class="footerBox__email"
-            >ballszone7@gmail.com</a
-          >
+          <div class="footerBox__item">
+            <a href="mailto:ballszone7@gmail.com" class="footerBox__email"
+              >ballszone7@gmail.com</a
+            >
+          </div>
+          <div class="footerBox__title">Support</div>
+          <div class="footerBox__item">
+            <a href="tel:+380937597572" class="footerBox__phone"
+              >+380 93 759 75 72</a
+            >
+          </div>
         </div>
         <div class="footerBox">
-          <div class="footerBox__title">Support</div>
-          <a href="tel:+380937597572" class="footerBox__phone"
-            >+380 93 759 75 72</a
-          >
+          <div class="footerBox__title">Help</div>
+          <div class="footerBox__item">
+            <a href="/pages/about.html" class="footerBox__privacy"
+              >About us</a
+            >
+          </div>
+          <div class="footerBox__item">
+            <a href="/pages/privacy.html" class="footerBox__privacy"
+              >Privacy Policy</a
+            >
+          </div>
+          <div class="footerBox__item">
+            <a href="/pages/delete-data.html" class="footerBox__privacy"
+              >Delete personal data</a
+            >
+          </div>
         </div>
       </div>
     </footer>
