--- a/pages/delete-data.html
+++ b/pages/delete-data.html
@@ -28,25 +28,75 @@
         </nav>
       </header>
       <main>
-        <div class="mainContent">
-          <section>
-            <div class="pageContent">
-              <h1 class="pageContent__title">About Us</h1>
-              <p class="pageContent__text">
-                We are "Balls" – a company that brings joy through balloons and
-                festive accessories. We are a large-scale supplier delivering
-                happiness to your home or event with fast and reliable service.
-              </p>
-              <p class="pageContent__text">Company type: Trading company.</p>
-              <p class="pageContent__text">
-                Thank you for choosing us for your celebration needs!
-              </p>
-              <p class="pageContent__text">
-                You can also write to us by email with the details of what
-                exactly you need, and we will create a custom order for you.
-              </p>
-            </div>
-          </section>
+        <div class="pageLayout">
+          <aside class="asideMenu">
+            <nav class="categoryNav">
+              <h2 class="categoryNav__title">Categories</h2>
+              <ul class="categoryNav__list">
+                <li class="categoryNav__item">
+                  <a href="/pages/categories.html" class="categoryNav__link"
+                    >Popular</a
+                  >
+                </li>
+                <li class="categoryNav__item">
+                  <a href="/pages/categories.html" class="categoryNav__link"
+                    >New</a
+                  >
+                </li>
+                <li class="categoryNav__item">
+                  <a href="/pages/categories.html" class="categoryNav__link"
+                    >All</a
+                  >
+                </li>
+                <li class="categoryNav__item">
+                  <a href="/pages/categories.html" class="categoryNav__link"
+                    >Foil Balls</a
+                  >
+                </li>
+                <li class="categoryNav__item">
+                  <a href="/pages/categories.html" class="categoryNav__link"
+                    >Printed Balloons</a
+                  >
+                </li>
+                <li class="categoryNav__item">
+                  <a href="/pages/categories.html" class="categoryNav__link"
+                    >Shaped Balloons</a
+                  >
+                </li>
+                <li class="categoryNav__item">
+                  <a href="/pages/categories.html" class="categoryNav__link"
+                    >Gel Balls</a
+                  >
+                </li>
+                <li class="categoryNav__item">
+                  <a href="/pages/categories.html" class="categoryNav__link"
+                    >Soft Toys</a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </aside>
+          <div class="mainContent">
+            <section>
+              <div id="law" class="law">
+                <h1 class="law__title">Delete personal data</h1>
+                <p>
+                  If you wish to delete your personal data, please send a
+                  request to
+                  <a href="mailto:ballszone7@gmail.com">ballszone7@gmail.com</a>
+                  and
+                  <a href="mailto:support@ballszone.com"
+                    >support@ballszone.com</a
+                  >
+                  with the subject “Delete my data”.
+                </p>
+                <p>
+                   We will process your request within 30 days in accordance
+                  with our <a href="/pages/privacy.html">Privacy Policy</a>.
+                </p>
+              </div>
+            </section>
+          </div>
         </div>
       </main>
     </div>
