--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -78,112 +78,93 @@
           </aside>
           <div class="mainContent">
             <section>
-              <div id="productCategories" class="productCategories">
-                <div class="productCategoryCard">
-                  <a
-                    href="/pages/categories.html"
-                    onclick="setCurrentCategory('foil balls')"
+              <div id="law" class="law">
+                <h1 class="law__title">Privacy Policy</h1>
+                <p><b>Effective Date:</b> [June 13, 2025]</p>
+                <p>
+                  BallsZone ("we", "our", or "us") is committed to protecting
+                  your privacy. This Privacy Policy explains how we collect,
+                  use, disclose, and safeguard your information when you log in
+                  to our application using Facebook or Google.
+                </p>
+                <h2>1. Information We Collect</h2>
+                <p>
+                  When you log in via <b>Facebook</b> or <b>Google</b>, we may
+                  collect the following information:
+                </p>
+                <ul>
+                  <li>Your full name</li>
+                  <li>Email address</li>
+                  <li>Profile picture</li>
+                  <li>Facebook or Google user ID</li>
+                  <li>
+                    Public profile information associated with your account
+                  </li>
+                </ul>
+                <p>
+                  We do <b>not</b> collect passwords or any sensitive financial
+                  or personal data.
+                </p>
+
+                <h2>2. How We Use Your Information</h2>
+                <p>We use your personal data to:</p>
+                <ul>
+                  <li>Authenticate you through Facebook or Google</li>
+                  <li>Provide you access to your account</li>
+                  <li>Personalize your experience</li>
+                  <li>Communicate with you when necessary</li>
+                  <li>Improve the quality of our services</li>
+                </ul>
+                <h2>3. Sharing of Information</h2>
+                <p>
+                  We do not sell, rent, or share your personal data with third
+                  parties, except:
+                </p>
+                <ul>
+                  <li>
+                    With service providers involved in operating the app (under
+                    strict confidentiality)
+                  </li>
+                  <li>If required by law or legal process</li>
+                </ul>
+                <h2>4. Data Retention</h2>
+                <p>
+                  We retain your information as long as your account is active
+                  or as needed to comply with our legal obligations. You may
+                  request data deletion at any time (see Section 6).
+                </p>
+                <h2>5. Security</h2>
+                <p>
+                  We use appropriate technical and organizational measures to
+                  protect your personal data from unauthorized access, misuse,
+                  or disclosure.
+                </p>
+                <h2>6. Your Rights</h2>
+                <p>
+                  You may contact us at
+                  <a href="mailto:ballszone7@gmail.com">ballszone7@gmail.com</a>
+                  to:
+                </p>
+                <ul>
+                  <li>Access the data we have about you</li>
+                  <li>Request deletion of your data</li>
+                  <li>Withdraw your consent for data usage</li>
+                </ul>
+                <p>We will respond within <b>30 days</b>.</p>
+                <h2>7. Updates</h2>
+                <p>
+                  We may update this Privacy Policy from time to time. You will
+                  be notified of any significant changes.
+                </p>
+                <h2>Contact Information:</h2>
+                <p>
+                  For any questions or concerns, email us at: <br /><br />
+                  <a href="mailto:ballszone7@gmail.com">ballszone7@gmail.com</a
+                  >, 
+                  <a href="mailto:support@ballszone.com"
+                    >support@ballszone.com</a
                   >
-                    <img
-                      class="productCategoryCard__img"
-                      src="/img/foil_balls/foil_balls_gold_star.png"
-                    />
-                    <div class="productCategoryCard__title">Foil Balls</div>
-                  </a>
-                </div>
-                <div class="productCategoryCard">
-                  <a
-                    href="/pages/categories.html"
-                    onclick="setCurrentCategory('printed balloons')"
-                  >
-                    <img
-                      class="productCategoryCard__img"
-                      src="/img/printed_balloons/printed_balloons_pack1.png"
-                    />
-                    <div class="productCategoryCard__title">
-                      Printed balloons
-                    </div>
-                  </a>
-                </div>
-                <div class="productCategoryCard">
-                  <a
-                    href="/pages/categories.html"
-                    onclick="setCurrentCategory('shaped balloons')"
-                  >
-                    <img
-                      class="productCategoryCard__img"
-                      src="/img/shaped_balloons/shaped_balloons_foil_balls_pack1.png"
-                    />
-                    <div class="productCategoryCard__title">
-                      Shaped balloons
-                    </div>
-                  </a>
-                </div>
-                <div class="productCategoryCard">
-                  <a
-                    href="/pages/categories.html"
-                    onclick="setCurrentCategory('gel balls')"
-                  >
-                    <img
-                      class="productCategoryCard__img"
-                      src="/img/gel_balls/gel_balls_gold.png"
-                    />
-                    <div class="productCategoryCard__title">Gel balls</div>
-                  </a>
-                </div>
-                <div class="productCategoryCard">
-                  <a
-                    href="/pages/categories.html"
-                    onclick="setCurrentCategory('soft toys')"
-                  >
-                    <img
-                      class="productCategoryCard__img"
-                      src="/img/soft_toys/soft_toys_crema_bear1.png"
-                    />
-                    <div class="productCategoryCard__title">Soft toys</div>
-                  </a>
-                </div>
-              </div>
-            </section>
-            <section>
-              <div id="weRecomend" class="weRecomend">
-                <h3 class="weRecomend__title">We recomend</h3>
-                <div class="weRecomend__products">
-                  <div class="productCard">
-                    <div class="productCard__code">
-                      Code: <span>36172</span>
-                    </div>
-                    <img
-                      src="/img/foil_balls/foil_balls_rocket.png"
-                      alt="Rocket ball"
-                      class="productCard__img"
-                    />
-                    <div class="productCard__title">
-                      <span>Rocket ball</span>
-                    </div>
-                    <div class="productCard__price"><span>10</span></div>
-                    <button class="productCard__btn" onclick="buyProduct()">
-                      Buy
-                    </button>
-                  </div>
-                  <div class="productCard">
-                    <div class="productCard__code">
-                      Code: <span>52061</span>
-                    </div>
-                    <img
-                      src="/img/gel_balls/gel_balls_pack11.png"
-                      alt="Rocket ball"
-                      class="productCard__img"
-                    />
-                    <div class="productCard__title">
-                      <span>Gel balls pack 11</span>
-                    </div>
-                    <div class="productCard__price"><span>10</span></div>
-                    <button class="productCard__btn" onclick="buyProduct()">
-                      Buy
-                    </button>
-                  </div>
-                </div>
+                </p>
               </div>
             </section>
           </div>
