add header meta tag + tuning footer

--- a/pages/about.html
+++ b/pages/about.html
@@ -88,9 +88,24 @@
         <div class="footerBox">
           <div class="footerBox__title">E-mail</div>
           <div class="footerBox__item">
-            <a href="mailto:ballszone7@gmail.com" class="footerBox__email"
-              >ballszone7@gmail.com</a
-            >
+            <div class="footerBox__emailContainer">
+              <a href="mailto:ballszone7@gmail.com" class="footerBox__email"
+                >ballszone7@gmail.com</a
+              >
+            </div>
+            <div class="footerBox__emailContainer">
+              <a href="mailto:support@ballszone.com" class="footerBox__email"
+                >support@ballszone.com</a
+              >
+            </div>
+          </div>
+          <div class="footerBox__title">Marketing questions</div>
+          <div class="footerBox__item">
+            <div class="footerBox__emailContainer">
+              <a href="mailto:polipchuktetiana@ukr.net" class="footerBox__email"
+                >polipchuktetiana@ukr.net</a
+              >
+            </div>
           </div>
           <div class="footerBox__title">Support</div>
           <div class="footerBox__item">
@@ -102,9 +117,7 @@
         <div class="footerBox">
           <div class="footerBox__title">Help</div>
           <div class="footerBox__item">
-            <a href="/pages/about.html" class="footerBox__privacy"
-              >About us</a
-            >
+            <a href="/pages/about.html" class="footerBox__privacy">About us</a>
           </div>
           <div class="footerBox__item">
             <a href="/pages/privacy.html" class="footerBox__privacy"
