--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="facebook-domain-verification"
+      content="u2a1m0ux6rsknahjjl2a3n0i601pkb"
+    />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
@@ -228,9 +232,24 @@
         <div class="footerBox">
           <div class="footerBox__title">E-mail</div>
           <div class="footerBox__item">
-            <a href="mailto:ballszone7@gmail.com" class="footerBox__email"
-              >ballszone7@gmail.com</a
-            >
+            <div class="footerBox__emailContainer">
+              <a href="mailto:ballszone7@gmail.com" class="footerBox__email"
+                >ballszone7@gmail.com</a
+              >
+            </div>
+            <div class="footerBox__emailContainer">
+              <a href="mailto:support@ballszone.com" class="footerBox__email"
+                >support@ballszone.com</a
+              >
+            </div>
+          </div>
+          <div class="footerBox__title">Marketing questions</div>
+          <div class="footerBox__item">
+            <div class="footerBox__emailContainer">
+              <a href="mailto:polipchuktetiana@ukr.net" class="footerBox__email"
+                >polipchuktetiana@ukr.net</a
+              >
+            </div>
           </div>
           <div class="footerBox__title">Support</div>
           <div class="footerBox__item">
@@ -242,9 +261,7 @@
         <div class="footerBox">
           <div class="footerBox__title">Help</div>
           <div class="footerBox__item">
-            <a href="/pages/about.html" class="footerBox__privacy"
-              >About us</a
-            >
+            <a href="/pages/about.html" class="footerBox__privacy">About us</a>
           </div>
           <div class="footerBox__item">
             <a href="/pages/privacy.html" class="footerBox__privacy"
