--- a/pages/about.html
+++ b/pages/about.html
@@ -131,6 +131,9 @@
           </div>
         </div>
       </div>
+      <div class="footerCopy">
+        © 2025 Individual Entrepreneur Polipchuk Tetiana Mykolayivna
+      </div>
     </footer>
     <button
       onclick="topFunction()"
