--- a/pages/categories.html
+++ b/pages/categories.html
@@ -17,7 +17,9 @@
               <a class="headerNav__link" href="/">Home</a>
             </li>
             <li class="headerNav__item">
-              <a class="headerNav__link" href="/pages/categories.html">Categories</a>
+              <a class="headerNav__link" href="/pages/categories.html"
+                >Categories</a
+              >
             </li>
             <li class="headerNav__item">
               <a class="headerNav__link" href="/pages/about.html">About Us</a>
@@ -146,6 +148,9 @@
             >
           </div>
         </div>
+      </div>
+      <div class="footerCopy">
+        © 2025 Individual Entrepreneur Polipchuk Tetiana Mykolayivna
       </div>
     </footer>
     <button
