--- a/pages/delete-data.html
+++ b/pages/delete-data.html
@@ -181,6 +181,9 @@
           </div>
         </div>
       </div>
+      <div class="footerCopy">
+        © 2025 Individual Entrepreneur Polipchuk Tetiana Mykolayivna
+      </div>
     </footer>
     <button
       onclick="topFunction()"
