--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -255,6 +255,9 @@
           </div>
         </div>
       </div>
+      <div class="footerCopy">
+        © 2025 Individual Entrepreneur Polipchuk Tetiana Mykolayivna
+      </div>
     </footer>
     <button
       onclick="topFunction()"
